[package]
name = "pond-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "*", features = ["ipc"] }
duckdb = { version = "^1.0.0", features = ["bundled"] }
lambda_http = { version = "0.13.0", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.12.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.128"
